; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/bio/extr_b_sock2.c_BIO_socket.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/bio/extr_b_sock2.c_BIO_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INVALID_SOCKET = common dso_local global i32 0, align 4
@SYS_F_SOCKET = common dso_local global i32 0, align 4
@BIO_F_BIO_SOCKET = common dso_local global i32 0, align 4
@BIO_R_UNABLE_TO_CREATE_SOCKET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BIO_socket(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 -1, i32* %10, align 4
  %11 = call i32 (...) @BIO_sock_init()
  %12 = icmp ne i32 %11, 1
  br i1 %12, label %13, label %15

13:                                               ; preds = %4
  %14 = load i32, i32* @INVALID_SOCKET, align 4
  store i32 %14, i32* %5, align 4
  br label %32

15:                                               ; preds = %4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @socket(i32 %16, i32 %17, i32 %18)
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %10, align 4
  %21 = icmp eq i32 %20, -1
  br i1 %21, label %22, label %30

22:                                               ; preds = %15
  %23 = load i32, i32* @SYS_F_SOCKET, align 4
  %24 = call i32 (...) @get_last_socket_error()
  %25 = call i32 @SYSerr(i32 %23, i32 %24)
  %26 = load i32, i32* @BIO_F_BIO_SOCKET, align 4
  %27 = load i32, i32* @BIO_R_UNABLE_TO_CREATE_SOCKET, align 4
  %28 = call i32 @BIOerr(i32 %26, i32 %27)
  %29 = load i32, i32* @INVALID_SOCKET, align 4
  store i32 %29, i32* %5, align 4
  br label %32

30:                                               ; preds = %15
  %31 = load i32, i32* %10, align 4
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %30, %22, %13
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i32 @BIO_sock_init(...) #1

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @SYSerr(i32, i32) #1

declare dso_local i32 @get_last_socket_error(...) #1

declare dso_local i32 @BIOerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
